--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
+    width: 100%
     margin: 10px 10px 10px 10px;
     justify-content:space-around;
 }
