--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    width: 100%
-    margin: 10px 10px 10px 10px;
+    width: 100%;
     justify-content:space-around;
 }
 
@@ -17,12 +16,13 @@ body {
 
 .main-image{
     margin: 0, auto;
+    height: auto;
     justify-content: center;
 }
 
 .main-img {
     box-shadow: 0px 2px 5px lightgray;
-    height: 400px;
+    height: auto;
     justify-content: center;
 }
 
