--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     width: 100%;
-    justify-content:space-around;
+    justify-content: center;
 }
 
 .title {
