--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 .description{
     margin-left: 50px;
     width: 800px;
-    align-items: center;
+    align-items: end;
 }
 
 .author-bio{
