--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ body {
 
 .description{
     margin-left: 50px;
+    margin-top: 100px;
     width: 800px;
-    align-items: end;
 }
 
 .author-bio{
