--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,6 @@ body {
 
 .description{
     margin-left: 50px;
-    margin-top: 100px;
     width: 800px;
 }
 
@@ -39,3 +38,6 @@ body {
     color: #007185;
 }
 
+.first-book{
+    align-items: center;
+}
